--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  Noorbit Technologies Pvt. Ltd. built the Soochi - Shopping | Any - List app as
-                  an Ad Supported app. This SERVICE is provided by
-                  Noorbit Technologies Pvt. Ltd. at no cost and is intended for use as
-                  is.
+                  Noorbit Technologies Pvt. Ltd. built the Japji Sahib + Audio, 
+                  Rehras Sahib + Audio, DukhBhanjani Sahib + Audio, 
+                  Sukhmani Sahib + Audio, Nitnem + Audio, Gutka Sahib + Audio, 
+                  Shiv Challisa with Audio, Hanuman Challisa + Audio, 
+                  Simple Timer, Any | Shopping List : Soochi app as
+                  an Ad Supported app with exception of Interval Timer + HIIT Workouts 
+                  where we are not using any ads. This SERVICE is provided by Noorbit Technologies Pvt. Ltd. 
+                  at no cost and is intended for use as is.
                 </p> <p>
                   This page is used to inform visitors regarding our
                   policies with the collection, use, and disclosure of Personal
@@ -25,7 +29,7 @@
                 </p> <p>
                   The terms used in this Privacy Policy have the same meanings
                   as in our Terms and Conditions, which is accessible at
-                  Soochi - Shopping | Any - List unless otherwise defined in this Privacy Policy.
+                  in any of our app unless otherwise defined in this Privacy Policy.
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, we
                   may require you to provide us with certain personally
@@ -39,14 +43,14 @@
                     by the app
                   </p> <ul><!----><li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank" rel="noopener noreferrer">AdMob</a></li><li><a href="https://firebase.google.com/policies/analytics" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li><li><a href="https://firebase.google.com/support/privacy/" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p>
                   We want to inform you that whenever you
-                  use our Service, in a case of an error in the app
-                  we collect data and information (through third party
-                  products) on your phone called Log Data. This Log Data may
-                  include information such as your device Internet Protocol
-                  (“IP”) address, device name, operating system version, the
-                  configuration of the app when utilizing our Service,
-                  the time and date of your use of the Service, and other
-                  statistics.
+                  use our Service, for now only case where we display ads, 
+                  in a case of an error in the app we collect data and 
+                  information (through third party products) on your phone 
+                  called Log Data. This Log Data may include information such 
+                  as your device Internet Protocol (“IP”) address, device name, 
+                  operating system version, the configuration of the app when 
+                  utilizing our Service, the time and date of your use of the Service,
+                  and other statistics.
                 </p> <p><strong>Cookies</strong></p> <p>
                   Cookies are files with a small amount of data that are
                   commonly used as anonymous unique identifiers. These are sent
